--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "discord-interactions": "^2.0.2",
     "dotenv": "^10.0.0",
+    "firebase-admin": "^9.9.0",
     "node-fetch": "^2.6.1",
     "raw-body": "^2.4.1"
   }
